Completed-MEAN-employee

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,7 @@
-<h1 class="bg-green-600">Hello World</h1>
-<button mat-raised-button color="primary">ok</button>
+<mat-toolbar>
+  <button mat-icon-button color="primary"></button>
+  <span>Employee Portal</span>
+</mat-toolbar>
+<div class="p-4">
+  <router-outlet></router-outlet>
+</div>
